[package]
name = "lurk-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.19.4"
gio = "0.19.4"
glib = "0.19.4"
gtk = { version = "0.5.5", package = "gtk4" }
pango = "0.19.3"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
